--- a/README
+++ b/README
@@ -31,3 +31,9 @@ $ ./gencert privkey.pem chain > cert.pem
 (And, to check the certificate:)
 
 $ openssl x509 -text < cert.pem | less
+
+
+Notes
+-------
+If you use rollerd to automagically roll your DNSSec keys you'll have to patch
+your installed Net-DNS-ZoneFile-Fast with the provided patch.
